<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:src="@drawable/inscription"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <TextView
        android:text="@string/register_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/fullNameEditText"
        android:hint="@string/register_fullname_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:hint="@string/register_email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/rppsEditText"
        android:hint="@string/register_rpps_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:hint="@string/register_confirm_password_hint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register_button"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/medical_blue"/>

    <TextView
        android:id="@+id/alreadyHaveAccountText"
        android:text="@string/register_already_account"
        android:textColor="@color/medical_blue"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
</LinearLayout>
