<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:src="@drawable/login"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:text="@string/login_app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <TextView
        android:text="@string/login_connect_to_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:hint="@string/login_hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/login_hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_btn_login"
        android:backgroundTint="@color/medical_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/createAccountText"
        android:text="@string/login_create_account"
        android:textColor="@color/medical_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <TextView
        android:text="@string/login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/login_btn_google"
        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:backgroundTint="@android:color/white" />
</LinearLayout>
