<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical"

    android:background="@drawable/rounded_border">

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_restart_message"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customdialog_btn_yes"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/medical_blue" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customdialog_btn_no"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/medical_blue"
            android:layout_marginStart="16dp" />
    </LinearLayout>
</LinearLayout>
