<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="36dp"
    android:layout_marginBottom="36dp"
    card_view:cardCornerRadius="32dp"
    card_view:cardElevation="12dp"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogaddmed_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/inputMedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialogaddmed_hint_name"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="14dp"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/inputMedPosologie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialogaddmed_hint_poso"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="24dp"
            android:inputType="textCapSentences"/>

        <Button
            android:id="@+id/saveMedicamentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogaddmed_btn"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/medical_blue" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
