<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="5dp"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/medName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/itemmedicament_nom"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/medical_blue"/>

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@android:drawable/ic_menu_delete"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/itemmedicament_supprimer"
                android:layout_marginStart="8dp"
                app:tint="@android:color/holo_red_dark" />
        </LinearLayout>

        <EditText
            android:id="@+id/medPosologie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/itemmedicament_posologie_hint"
            android:textColor="#444"
            android:textSize="15sp"
            android:inputType="textCapSentences"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
